--- a/index.html
+++ b/index.html
@@ -3,16 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="ASSETS/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+<title>Ohmyfood</title>
 </head>
 <body>
-  <header>
-    <nav>
-        liens 1 
+    <header>
+    <nav class="navbar">
+<img class="logo" src="ASSETS/Images et textes Ohmyfood/images/logo/ohmyfood.png">
     </nav>
-  </header>
-  <main>
-    <h1>Mon titre </h1>
-  </main>  
+    </header>
+    <main>
+    <input type="text" value="Paris,Belleville">
+    <section class="menu">
+    <h1>Réserver le menu qui vous convient</h1>  
+    <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+    <button class="gradient-btn">Explorer nos restaurants</button> 
+    </section>
+    <section class="Fonctionement">
+    <h2>Fonctionnement</h2>
+    <button>Choisissez un restaurant</button>
+    <button>Composez votre menu</button>
+    <button>Dégustez au restaurant</button>
+</section>
+<section>
+    <div class="Restaurants">
+    <a href="#">
+    <article class="">
+    <img
+    src="ASSETS/Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+    alt="images plats gastronomiques ">
+    <div class="">
+    <div class="">
+    <h3 class="card-title">La palette du goût</h3>
+    <p class="">Ménilmontant</p>
+    </div>
+    <div class="Restaurants">
+    <a href="#">
+    <article class="">
+    <img
+    src="ASSETS/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+    alt="images plats gastronomiques">
+    <div class="">
+    <div class="">
+    <h3 class="card-title">La note enchantée</h3>
+    <p class="">Charonne</p>
+    </div>
+    <div class="Restaurants">
+    <a href="#">
+    <article class="">
+    <img
+    src="ASSETS/Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+    alt="images plats gastronomiques ">
+    <div class="">
+    <div class="">
+    <h3 class="card-title">À la française</h3>
+    <p class="">Cité Rouge</p>
+    </div>
+    <div class="Restaurants">
+    <a href="#">
+    <article class="">
+    <img
+    src="ASSETS/Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+    alt="images plats gastronomiques ">
+    <div class="">
+    <div class="">
+    <h3 class="card-title">Le délice des sens</h3>
+    <p class="">Folie-Méricourt</p>
+    </div>
+</section>
+    <footer>
+    <div>
+    <article class="">
+    <h3 class="">ohmyfood</h3>
+    <a class="" href="#">Proposer un restaurant</a>
+    <a class="" href="#">Devenir partenaire</a>
+    <a class="" href="#">Mentions légales</a>
+    <a class="" href="#">Contact</a>
+    </article>
+    </div>
+    </footer>
+    </main>  
 </body>
 </html>
