--- a/index2.html
+++ b/index2.html
@@ -20,11 +20,12 @@
     <main>
     <section class="accueil-section">
         <div>
-            <h1></h1>
-        <img class="images-bouff" src="ASSETS/Images-et-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img class="img-menu" src="ASSETS/Images-et-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
         </div>
     </section>
-
+    <section class="price">
+        <h2>La palette du goût</h2>
+    </section>
     </main>
 </body>
 </html>
