--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
     </section>
     <footer>
-        <div class="footer-section">
+        <div class="footer-section footer-menu-version">
             <h3 class="">ohmyfood</h3>
             <article class="footer-text">
             <p><svg width="11" height="13" viewBox="0 0 11 13" fill="none" xmlns="http://www.w3.org/2000/svg">
