--- a/index3.html
+++ b/index3.html
@@ -29,7 +29,7 @@
         <h2 class="title-two">Le délice des sens</h2>
         <div>
         <div class="colo">
-        <h3 class="title-three">Entrées</h3>
+        <h3 class="title-three border-bottom">ENTRÉES</h3>
         <article>
         <div class="card-content">
         <div class="card-txt">
@@ -52,7 +52,7 @@
         </div>
         </article>
         <div class="flat">
-            <h3 class="title-three">Plats</h3>
+            <h3 class="title-three border-btm">PLATS</h3>
         <article>
             <div class="card-content">
                 <div class="card-txt">
@@ -76,7 +76,7 @@
         </article>
         </div>
         <div class="dessert">
-            <h3 class="title-three">Desserts</h3>
+            <h3 class="title-three border-btm">DESSERTS</h3>
         <article>
             <div class="card-content">
                 <div class="card-txt">
