--- a/index4.html
+++ b/index4.html
@@ -29,7 +29,7 @@
         <h2 class="title-two">La note enchantée</h2>
         <div>
         <div class="colo">
-        <h3 class="title-three">Entrées</h3>
+        <h3 class="title-three border-bottom">Entrées</h3>
         <article>
         <div class="card-content">
         <div class="card-txt">
@@ -62,7 +62,7 @@
             
 
         <div class="flat">
-            <h3 class="title-three">Plats</h3>
+            <h3 class="title-three border-btm">PLATS</h3>
         <article>
             <div class="card-content">
                 <div class="card-txt">
@@ -86,7 +86,7 @@
         </article>
         </div>
         <div class="dessert">
-            <h3 class="title-three">Desserts</h3>
+            <h3 class="title-three border-btm">DESSERTS</h3>
         <article>
             <div class="card-content">
                 <div class="card-txt">
