--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="menu">
         <div class="hp-block">
         <h1>Réservez le menu qui<br class="title-br"> vous convient</h1>
-        <p class="text-hp"> Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+        <p class="text-hp"> Découvrez des restaurants d’exception,<br class="title-br"> sélectionnés par nos soins.</p>
         <div class="explore-button"> 
         <a id="gradient-btn" href="#restaurants">Explorer nos restaurants</a>
         </div>
